--- a/index.ipynb
+++ b/index.ipynb
@@ -63,11 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; import sqlite, create a connection and then a cursor object."
+    "#Your code here; import sqlite, create a connection and then a cursor object.\n",
+    "import sqlite3 \n",
+    "conn = sqlite3.connect('dogs.db')\n",
+    "c = conn.cursor()"
    ]
   },
   {
@@ -95,7 +98,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Little Ann', 'coonhound'),\n",
+       " ('Pickles', 'black lab'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Snowy', 'fox terrier')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute(\"\"\"select name, breed from dogs where gender = 'F';\"\"\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,11 +137,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None,),\n",
+       " ('Clifford',),\n",
+       " ('Lassie',),\n",
+       " ('Little Ann',),\n",
+       " ('McGruff',),\n",
+       " ('Pickles',),\n",
+       " ('Scooby',),\n",
+       " ('Snoopy',),\n",
+       " ('Snowy',)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select name from dogs order by name\"\"\").fetchall()"
    ]
   },
   {
@@ -127,7 +173,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute(\"\"\"SELECT * FROM dogs WHERE name IS NULL\"\"\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,11 +209,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Snoopy', 'beagle'),\n",
+       " ('Clifford', 'big red'),\n",
+       " (None, 'golden retriever'),\n",
+       " ('Scooby', 'great dane'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Pickles', 'black lab')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"SELECT name, breed FROM dogs WHERE hungry = 1 ORDER BY age\"\"\").fetchall()"
    ]
   },
   {
@@ -159,11 +242,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Pickles', 13, 'mischievous')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"SELECT name, age, temperament FROM dogs ORDER BY age DESC\"\"\").fetchone()"
    ]
   },
   {
@@ -175,11 +270,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Snoopy', 3, 'M', 'beagle', 'friendly', 1),\n",
+       " (6, 'Clifford', 4, 'M', 'big red', 'smiley', 1),\n",
+       " (9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"SELECT * FROM dogs ORDER BY age LIMIT 3\"\"\").fetchall()"
    ]
   },
   {
@@ -191,11 +300,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('McGruff', 'bloodhound'),\n",
+       " ('Scooby', 'great dane'),\n",
+       " ('Little Ann', 'coonhound'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Snowy', 'fox terrier')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"SELECT name, breed FROM dogs WHERE age BETWEEN 5 AND 10\"\"\").fetchall()"
    ]
   },
   {
@@ -207,11 +332,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None, 4, 1),\n",
+       " ('Clifford', 4, 1),\n",
+       " ('Lassie', 7, 1),\n",
+       " ('Scooby', 6, 1),\n",
+       " ('Snoopy', 3, 1)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"SELECT name, age, hungry FROM dogs WHERE hungry = 1 AND age BETWEEN 2 AND 7 ORDER BY name\"\"\").fetchall()"
    ]
   },
   {
@@ -231,9 +372,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:learn-env] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-learn-env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -245,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
